--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <button onclick="calculate()">=</button>
     </div>
 
-    <script src="script.js">
+    <script>
         function appenCalcluate(value) {
             document.getElementById('input').value += value;
         }
